--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/yaguine">yag1n3</a>.
     </p>
   </footer>
 </body>
